--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="uft-8"/>
 	<title>Quiz App</title>
 	<link rel='stylesheet' type='text/css' href='css/reset.css' />
 	<link rel='stylesheet' type='text/css' href='css/stylesheet.css' />
